<resources>
    <string name="app_name">Todo</string>
    <string name="login">ورود</string>
    <string name="register">ثبت نام</string>
    <string name="hint_email">ایمیل</string>
    <string name="hint_password">کلمه ی عبور</string>
    <string name="hint_password_rep">تکرار کلمه ی عبور</string>
    <string name="sign_up_note">حساب ندارید؟‌ کلیک کنید</string>
    <string name="sign_in_note">قبلا ثبت نام کرده اید؟‌اینجا کلیک کنید</string>
    <string name="err_login_failed">نام کاربری یا کلمه ی عبور اشتباه است</string>
    <string name="err_connection_failed">مشکل در اتصال به اینترنت</string>
    <string name="signup_successful">حساب شما با موفقیت ایجاد شد</string>
    <string name="err_password_must_be_gt_x">کلمه ی عبور باید از x باشد</string>
    <string name="err_email_already_exists">ایمیل وارد شده قبلا در سیستم ثبت شده است</string>
    <string name="title_activity_todo_list">TodoListActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="err_password_mismatch">کلمه های عبور با هم تطابق ندارند</string>
    <string name="hint_i_want_to">میخوام که ...</string>
    <string name="today_at_6">امروز ساعت ۶</string>
    <string name="next_5_min">۵ دقیقه دیگه</string>
    <string name="next_15_min">۱۵ دقیقه دیگه</string>
    <string name="next_30_min">۳۰ دقیقه دیگه</string>
    <string name="next_1_hour">یک ساعت دیگه</string>
    <string name="next_2_hour">۲ ساعت دیگه</string>
    <string name="tomorrow">فردا</string>
    <string name="weekend_thu">پنجشنبه بعدی</string>
    <string name="weekend_fri">جمعه بعدی</string>
    <string name="all_tasks">همه ی کارها</string>
    <string name="todo_list">کارها</string>
    <string name="statistics">آمار </string>
    <string name="settings">تنظیمات</string>
    <string name="today">امروز</string>
    <string name="others">سایر کارها</string>
    <string name="projects">پروژه ها</string>
    <string name="done_today">کاری برای امروز نداری! امروز رو تفریح کن!</string>
    <string name="no_task_yet">هنوز کاری ثبت نشده!</string>
    <string name="empty_task">لطفا محتوایی برای کار تایپ کنید</string>
    <string name="submit">تایید</string>
    <string name="list_name">نام لیست</string>
</resources>
